--- a/PracticeSet/PracticeSetHtml/practiceSetLoop.html
+++ b/PracticeSet/PracticeSetHtml/practiceSetLoop.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <script>
-        
+        let arr = [5,6]
+        console.log(arr);
+        arr.push(1)
+        console.log(arr)
+        arr.unshift(5)
+        console.log(arr)
     </script>
 </body>
 </html>
